# smart-flower-pot

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: build.yml  deploy-github-pages.yml
.trae/documents/: add-web-serial-mode.md
esp32-c6/smart_flower_pot/: smart_flower_pot.ino
src/: actuators.rs  ble_service.rs  config.rs  main.rs  sensors.rs
web/: index.html  package-lock.json  package.json  test.html  vite.config.js
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: main.ts  styles.css  vite-env.d.ts
web/public/: manifest.json  sw.js
web/src/: App.vue  ble.js  history.js  main.js  serial.js  settings.js  style.css  sw-register.js  test.js  theme.js  toast.js  ui.js
web/src/components/: AppHeader.vue  ConnectPanel.vue  Dashboard.vue  DeviceInfo.vue  DisconnectAction.vue  SensorCard.vue  SettingsPanel.vue
web/src/composables/: useConnection.js  useTheme.js  useToast.js
web/src/lib/: ble.js  publicPath.js  serial.js  settings.js
