[package]
name = "smart-flower-pot"
version = "0.1.0"
authors = ["fang"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "smart-flower-pot"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
embassy-futures = "0.1"
anyhow = "1.0"
heapless = "0.8"

[build-dependencies]
embuild = "0.33"
